# lazydog-office

./: .env.example  .gitignore  README.md  docker-compose.yml  n8n_workflow.json  pyproject.toml
backend/: Dockerfile  database.py  main.py  models.py
backend/agents/: commander.py  copywriter.py  image_gen.py  strategist.py  supervisor.py  trend_analyst.py
backend/services/: agent_messenger.py  office_state.py  publisher.py  telegram_bot.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentDesk.tsx  JobQueue.tsx  PixelOffice.tsx  TelegramFeed.tsx
frontend/styles/: pixel.css
